Fix MediaRecorder bitrate configuration bug

The MediaRecorder API specifies that bitrates be communicated in bits
per second, which is correctly plumbed through Chrome.  However, VPx
encoders expect its arguments to be specified in kilobits per second.
This resulted in specifying any bitrate via the javascript API to be
off by a thousand, resulting in enormous files.  Change it so we
convert bits -> kilobits by dividing by 1000
BUG=605750

R=mcasas@chromium.org

Review URL: https://codereview.chromium.org/1913233002

Cr-Commit-Position: refs/heads/master@{#389411}

Former-commit-id: 0a58e7128c0559027991ae4671fb7b16274b7ba3